# imgui-android

./: .gitignore  LICENSE  README.md  settings.gradle
.github/workflows/: android-ci.yml
app/: AndroidManifest.xml  build.gradle  proguard-rules.pro
app/src/main/assets/: README.txt
app/src/main/cpp/: CMakeLists.txt  android_input.cpp  android_input.h  main.cpp  ui_demo.cpp  ui_demo.h
app/src/main/cpp/imgui_backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
app/src/main/res/values/: strings.xml
